Bug 320018 - incomplete moving of object widgets
Summary: incomplete moving of object widgets
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-19 16:39 UTC by Ralf Habacker
Modified: 2013-05-30 08:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2013-05-19 16:39:27 UTC
Moving object widgets in a sequence diagram will not move the vertical sequence line. 


Reproducible: Always

Steps to Reproduce:
1.start umbrello
2. create a new sequence diagram
3. add an object widget
4. move the object widget to the left or right
Actual Results:  
The vertical sequence line is not moved along with the object widget

Expected Results:  
The vertical sequence line should be moved along with the object widget

The bug has been introduced with commit https://projects.kde.org/projects/kde/kdesdk/umbrello/repository/revisions/d39a1bb53a0f862c8f96ebb4c58a7ab92e70168
Comment 1 Ralf Habacker 2013-05-19 16:42:01 UTC
Git commit 3f2f6c97ba798e684aa81f78fc9106c993d87393 by Ralf Habacker.
Committed on 19/05/2013 at 18:40.
Pushed by habacker into branch 'master'.

Fixed bug where the sequence line is not moved along with the object widget.

M  +24   -0    umbrello/widgets/umlwidget.cpp
M  +3    -0    umbrello/widgets/umlwidget.h

http://commits.kde.org/umbrello/3f2f6c97ba798e684aa81f78fc9106c993d87393
Comment 2 Ralf Habacker 2013-05-19 16:58:20 UTC
Just for the record: On mouse move event EventUMLWidgetController::moveWidgetBy() calls widgets setX()/setY() to set the new position. Removing the virtual UMLWidget::setX()/setY() methods results into calling inheritated QGraphicsObject::setX()/setY() and not the reimplemented methods from ObjectWidget.
Comment 3 Ralf Habacker 2013-05-30 08:13:05 UTC
Git commit 3111ce74e19e1e639d0d335f0c261f3e0a24d8e0 by Ralf Habacker.
Committed on 19/05/2013 at 18:40.
Pushed by habacker into branch 'KDE/4.10'.

Fixed bug where the sequence line is not moved along with the object widget.

M  +24   -0    umbrello/widgets/umlwidget.cpp
M  +3    -0    umbrello/widgets/umlwidget.h

http://commits.kde.org/umbrello/3111ce74e19e1e639d0d335f0c261f3e0a24d8e0