Fixed bug where the sequence line is not moved along with the object widget.

BUG: 320018